--- a/main.html
+++ b/main.html
@@ -9,7 +9,33 @@
 </head>
 <body>
     <!-- add table here -->
-
+<table>
+	<thead class="header">
+		<tr>
+			<th>Name</th>
+			<th>Kills</th>
+			<th>Saved</th>
+			<th>Death</th>
+			<th>Win</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>Faiz</td>
+			<td>10</td>
+			<td>0</td>
+			<td>2</td>
+			<td>2</td>
+		</tr>
+		<tr>
+			<td>Swapnil</td>
+			<td>5</td>
+			<td>2</td>
+			<td>3</td>
+			<td>1</td>
+		</tr>
+	</tbody>
+</table>
         
 </body>
 </html>
